// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Components - Snapshots > matches snapshot for HeaderButtonSignIn 1`] = `
<button
  class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
  data-slot="button"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-log-in mr-2 h-4 w-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m10 17 5-5-5-5"
    />
    <path
      d="M15 12H3"
    />
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
  </svg>
  Sign in
</button>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderContainer 1`] = `
<header
  class="pointer-events-none sticky top-0 z-(--z-sticky-header) w-full bg-linear-to-b from-(--background) from-50% to-transparent py-6"
  data-testid="container"
>
  <div
    class="mx-auto w-full container flex flex-row flex-wrap items-center justify-between gap-4 sm:gap-6 px-4 py-4 sm:px-6 sm:py-6"
    data-testid="container"
  >
    <nav
      class="mx-auto pointer-events-auto flex w-full flex-row flex-wrap items-center gap-4 sm:flex-nowrap sm:items-center sm:gap-6"
      data-testid="container"
    >
      <div>
        Test Content
      </div>
    </nav>
  </div>
</header>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderHome 1`] = `
<div
  class="mx-auto w-full flex flex-1 flex-row items-center justify-end"
  data-testid="container"
>
  <div
    class="mx-auto w-full mr-6 hidden flex-row justify-end gap-6 md:flex"
    data-testid="header-social-links"
  >
    <a
      class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
      href="https://github.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="h-6 w-6"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 22V18C15.1392 16.7473 14.78 15.4901 14 14.5C17 14.5 20 12.5 20 9C20.08 7.75 19.73 6.52 19 5.5C19.28 4.35 19.28 3.15 19 2C19 2 18 2 16 3.5C13.36 3 10.64 3 8.00004 3.5C6.00004 2 5.00004 2 5.00004 2C4.70004 3.15 4.70004 4.35 5.00004 5.5C4.27191 6.51588 3.91851 7.75279 4.00004 9C4.00004 12.5 7.00004 14.5 10 14.5C9.61004 14.99 9.32004 15.55 9.15004 16.15C8.98004 16.75 8.93004 17.38 9.00004 18M9.00004 18V22M9.00004 18C4.49004 20 4 16 2 16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </a>
    <a
      class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
      href="https://twitter.com/getpubky"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="lucide-x-twitter h-6 w-6"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          clip-path="url(#clip0_18345_202114)"
        >
          <path
            d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
            fill="currentColor"
            opacity="0.8"
          />
        </g>
        <defs>
          <clippath
            id="clip0_18345_202114"
          >
            <rect
              fill="white"
              height="24"
              width="24"
            />
          </clippath>
        </defs>
      </svg>
    </a>
    <a
      class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
      href="https://t.me/getpubky"
      rel="noopener noreferrer"
      target="_blank"
    >
      <svg
        class="lucide-telegram h-6 w-6"
        fill="none"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
        />
      </svg>
    </a>
  </div>
  <button
    class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 gap-1 px-4 py-2 has-[>svg]:px-4"
    data-slot="button"
    data-variant="secondary"
    id="header-sign-in-btn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-log-in mr-2 h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m10 17 5-5-5-5"
      />
      <path
        d="M15 12H3"
      />
      <path
        d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
      />
    </svg>
    Sign in
  </button>
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderNavigationButtons 1`] = `
<div
  class="mx-auto hidden w-auto flex-row items-center justify-start gap-3 lg:flex"
  data-testid="container"
>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/home"
  >
    <button
      aria-label="Home"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/hot"
  >
    <button
      aria-label="Hot"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/bookmarks"
  >
    <button
      aria-label="Bookmarks"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/settings/account"
  >
    <button
      aria-label="Settings"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm relative"
    data-cy="header-nav-profile-btn"
    href="/profile"
  >
    <div
      class="cursor-pointer"
      data-alt="Profile"
      data-name="TU"
      data-testid="avatar-with-fallback"
    >
      TU
    </div>
  </a>
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderNavigationButtons with counter 1`] = `
<div
  class="mx-auto hidden w-auto flex-row items-center justify-start gap-3 lg:flex"
  data-testid="container"
>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/home"
  >
    <button
      aria-label="Home"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/hot"
  >
    <button
      aria-label="Hot"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/bookmarks"
  >
    <button
      aria-label="Bookmarks"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
    href="/settings/account"
  >
    <button
      aria-label="Settings"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
      data-size="icon"
      data-slot="button"
      data-variant="secondary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings size-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </button>
  </a>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm relative"
    data-cy="header-nav-profile-btn"
    href="/profile"
  >
    <div
      class="cursor-pointer"
      data-alt="Profile"
      data-name="TU"
      data-testid="avatar-with-fallback"
    >
      TU
    </div>
    <div
      class="inline-flex items-center justify-center border px-2 py-0.5 text-xs font-medium whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent text-secondary-foreground [a&]:hover:bg-secondary/90 absolute right-0 bottom-0 h-5 w-5 rounded-full bg-brand shadow-sm"
      data-cy="header-notification-counter"
      data-slot="badge"
      data-variant="secondary"
    >
      <p
        class="text-xs font-semibold text-primary-foreground"
        data-testid="typography"
      >
        5
      </p>
    </div>
  </a>
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderOnboarding 1`] = `
<div
  data-current="3"
  data-testid="progress-steps"
  data-total="5"
>
  Progress Steps
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderSignIn 1`] = `
<div
  class="mx-auto w-full flex flex-1 flex-row items-center justify-end gap-3"
  data-testid="container"
>
  <div
    data-testid="search-input"
  >
    Search Input
  </div>
  <div
    class="mx-auto hidden w-auto flex-row items-center justify-start gap-3 lg:flex"
    data-testid="container"
  >
    <a
      class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
      href="/home"
    >
      <button
        aria-label="Home"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-house size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
          />
          <path
            d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
        </svg>
      </button>
    </a>
    <a
      class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
      href="/hot"
    >
      <button
        aria-label="Hot"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-flame size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
          />
        </svg>
      </button>
    </a>
    <a
      class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
      href="/bookmarks"
    >
      <button
        aria-label="Bookmarks"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-bookmark size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17 3a2 2 0 0 1 2 2v15a1 1 0 0 1-1.496.868l-4.512-2.578a2 2 0 0 0-1.984 0l-4.512 2.578A1 1 0 0 1 5 20V5a2 2 0 0 1 2-2z"
          />
        </svg>
      </button>
    </a>
    <a
      class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm"
      href="/settings/account"
    >
      <button
        aria-label="Settings"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full shadow-xs text-secondary-foreground hover:bg-secondary/80 size-9 h-12 w-12 backdrop-blur-md border bg-white/5"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-settings size-6"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
      </button>
    </a>
    <a
      class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm relative"
      data-cy="header-nav-profile-btn"
      href="/profile"
    >
      <div
        class="cursor-pointer"
        data-alt="Profile"
        data-name="Test User"
        data-testid="avatar-with-fallback"
        data-url="https://cdn.example.com/avatar/[object Object]"
      >
        Test User
      </div>
    </a>
  </div>
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderSocialLinks 1`] = `
<div
  class="mx-auto w-full mr-6 hidden flex-row justify-end gap-6 md:flex"
  data-testid="header-social-links"
>
  <a
    class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
    href="https://github.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="h-6 w-6"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 22V18C15.1392 16.7473 14.78 15.4901 14 14.5C17 14.5 20 12.5 20 9C20.08 7.75 19.73 6.52 19 5.5C19.28 4.35 19.28 3.15 19 2C19 2 18 2 16 3.5C13.36 3 10.64 3 8.00004 3.5C6.00004 2 5.00004 2 5.00004 2C4.70004 3.15 4.70004 4.35 5.00004 5.5C4.27191 6.51588 3.91851 7.75279 4.00004 9C4.00004 12.5 7.00004 14.5 10 14.5C9.61004 14.99 9.32004 15.55 9.15004 16.15C8.98004 16.75 8.93004 17.38 9.00004 18M9.00004 18V22M9.00004 18C4.49004 20 4 16 2 16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </a>
  <a
    class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
    href="https://twitter.com/getpubky"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="lucide-x-twitter h-6 w-6"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_18345_202114)"
      >
        <path
          d="M14.2833 10.1616L23.2178 -0.000732422H21.1006L13.3427 8.8231L7.14656 -0.000732422H0L9.36984 13.3425L0 23.9993H2.11732L10.3098 14.681L16.8534 23.9993H24L14.2827 10.1616H14.2833ZM11.3833 13.46L10.4339 12.1313L2.88022 1.55888H6.1323L12.2282 10.0912L13.1776 11.4199L21.1016 22.5106H17.8495L11.3833 13.4605V13.46Z"
          fill="currentColor"
          opacity="0.8"
        />
      </g>
      <defs>
        <clippath
          id="clip0_18345_202114"
        >
          <rect
            fill="white"
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
  </a>
  <a
    class="cursor-pointer transition-colors text-muted-foreground hover:text-brand text-sm"
    href="https://t.me/getpubky"
    rel="noopener noreferrer"
    target="_blank"
  >
    <svg
      class="lucide-telegram h-6 w-6"
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.5 2.5L2 11l7.5 3L19 4.5l-6 11.5 3 6.5 5.5-20z"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </a>
</div>
`;

exports[`Header Components - Snapshots > matches snapshot for HeaderTitle 1`] = `
<div
  class="mx-auto w-full flex-col hidden flex-1 md:flex"
  data-testid="container"
>
  <h2
    class="text-2xl font-normal text-muted-foreground"
    data-testid="heading-2"
  >
    Test Title
  </h2>
</div>
`;
